--- a/index.html
+++ b/index.html
@@ -63,11 +63,6 @@ a {
 	text-align: center;
 	margin-left: 440px;
 }
-.auto-style62 {
-	font-family: Raleway;
-	font-size: x-large;
-	margin-left: 80px;
-}
 .auto-style63 {
 	color: #FFBF00;
 }
@@ -76,6 +71,18 @@ a {
 }
 .auto-style65 {
 	font-size: x-large;
+}
+.auto-style66 {
+	font-size: large;
+}
+.auto-style67 {
+	font-size: x-large;
+	color: #0E2036;
+	background-color: #FFFFFF;
+}
+.auto-style68 {
+	color: #0E2036;
+	background-color: #FFFFFF;
 }
 </style>
 </head>
@@ -104,83 +111,79 @@ Bei Fragen/Problemen etc. bitte im
 <a href="http://discord.savetheinternet.info">Discord</a> bei Flashyy/Soldiermelly melden.<br />
 <br />
 </span><br class="auto-style57" />
-</p>
-<p class="auto-style54" style="width: 876px"><span class="auto-style62"><strong>
-FLYER/BANNER/PLAKATE</strong></span><br />
 <br class="auto-style57" />
-<span class="auto-style57"><strong><span class="auto-style65">Flyer</span></strong> (A6, 1mm Rand, CMYK, 
-300dpi)</span><br class="auto-style57" />
+<span class="auto-style57"><strong><span class="auto-style67">&nbsp;Flyer: </span></strong>&nbsp;(A6, 1mm Rand)</span><br class="auto-style57" />
+<br />
 <br class="auto-style57" />
-<span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Infoflyer<br />
-</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="Flyer/NIGHTY/NIGHTY-FRONT.pdf">Vorderseite</a> |
+<span class="auto-style57"><strong>-Infoflyer<br />
+</strong>&nbsp;&nbsp;&nbsp; <a href="Flyer/NIGHTY/NIGHTY-FRONT.pdf">Vorderseite</a> |
 <a href="Flyer/NIGHTY/NIGHTY-BACKneu.pdf">Rückseite</a><strong><br />
 </strong></span>
 <br class="auto-style57" />
-<span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Demo Flyer mit Karte</strong></span><br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="auto-style57">
-<a href="Flyer/MELLY/PRINTTEMP.pdf">V<span class="auto-style63">orderseite</span></a> 
+<span class="auto-style57"><strong>-Demo Flyer mit Karte</strong></span><br />
+<span class="auto-style57">
+&nbsp;&nbsp;&nbsp; <a href="Flyer/MELLY/PRINTTEMP.pdf">V<span class="auto-style63">orderseite</span></a> 
 | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><br />
-<br />
 <br class="auto-style57" />
-<span class="auto-style57"><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Einzeldemos <br />
-&nbsp;&nbsp;&nbsp; </strong><em><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Regionalleiter/Demoorganisatoren:</strong></em><strong><br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>Logos der 
+-<span class="auto-style57"><strong>Einzeldemos <br />
+<br />
+&nbsp;&nbsp;&nbsp; </strong>Regionalleiter/Demoorganisatoren:<strong><br />
+&nbsp;&nbsp;&nbsp; </strong>Logos der 
 Bündnispartner werden auf Nachfrage eingebaut. Gerne könnt ihr das Formular 
 dafür nutzen:<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://goo.gl/forms/GDgE1W0WukdAhmET2">
+&nbsp;&nbsp;&nbsp; <a href="https://goo.gl/forms/GDgE1W0WukdAhmET2">
 https://goo.gl/forms/GDgE1W0WukdAhmET2</a><br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Bitte auch die Richtigkeit der Angaben auf den Flyern überprüfen!</span><strong><br class="auto-style57" />
+&nbsp;&nbsp;&nbsp; Bitte auch die Richtigkeit der Angaben auf den Flyern überprüfen!</span><strong><br class="auto-style57" />
 <br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span class="auto-style57">&nbsp;<a href="staedteflyer.html">&gt;Zur 
-Städteübersicht</a></span><br />
+<span class="auto-style57">&nbsp;&nbsp;&nbsp; <a href="staedteflyer.html">
+<span class="auto-style66">&gt;Zur 
+Städteübersicht</span></a></span><br />
 <br class="auto-style57" />
-</strong><span class="auto-style57"><strong><br />
+</strong><span class="auto-style57"><strong>
 <br />
 <br />
-<span class="auto-style65">Banner: <br />
+<span class="auto-style65"><span class="auto-style68">&nbsp;Banner: </span>&nbsp;<br />
 </span> <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 </strong>Probleme? Andere Größen notwendig? -&gt; Ansprechpartner: <strong>tian_b / 
 Melly / Flashyy<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>Angaben in Meter<strong>:<br />
+</strong>Angaben in Meter<strong>:<br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -#SAVEYOURINTERNET 
-</strong>(<a href="Flyer/Banner/Saveyourinternet/3x075_1.pdf">3x0,75</a> |
+-#SAVEYOURINTERNET <br />
+&nbsp;&nbsp;&nbsp; 
+</strong><a href="Flyer/Banner/Saveyourinternet/3x075_1.pdf">3x0,75</a> |
 <a href="Flyer/Banner/Saveyourinternet/4x075_2.pdf">4x0,75</a> |
 <a href="Flyer/Banner/FreiesInternet/5x075_1.pdf">5x075</a> |
 <a href="Flyer/Banner/FreiesInternet/5x1_1.pdf">5x1</a> |
 <a href="Flyer/Banner/Saveyourinternet/6x1_1.pdf">6x1</a> |
-<a href="Flyer/Banner/Saveyourinternet/demobanner1zu2-7mal1-v1.pdf">7x1</a>)<strong><br />
+<a href="Flyer/Banner/Saveyourinternet/demobanner1zu2-7mal1-v1.pdf">7x1</a><strong><br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Für ein freies Internet </strong>(<a href="Flyer/Banner/FreiesInternet/3x075_2.pdf">3x0,75</a> 
+-Für ein freies Internet <br />
+&nbsp;&nbsp;&nbsp; </strong><a href="Flyer/Banner/FreiesInternet/3x075_2.pdf">3x0,75</a> 
 | <a href="Flyer/Banner/FreiesInternet/4x075_1.pdf">4x0,75</a> |
 <a href="Flyer/Banner/Saveyourinternet/5x075_2.pdf">5x075</a> |
 <a href="Flyer/Banner/Saveyourinternet/5x1_2.pdf">5x1</a> |
 <a href="Flyer/Banner/FreiesInternet/6x1_2.pdf">6x1</a> |
-<a href="Flyer/Banner/FreiesInternet/demobanner1zu2-7mal1-v2.pdf">7x1</a>)<strong><br />
+<a href="Flyer/Banner/FreiesInternet/demobanner1zu2-7mal1-v2.pdf">7x1</a><strong><br />
 <br />
 <br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 </strong>Outdated:<strong><br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -#SAVEYOURINTERNET 
-(</strong><a href="Flyer/Banner/Banner200x70.pdf">2x0,7</a>)<br />
+-#SAVEYOURINTERNET<br />
+&nbsp;&nbsp;&nbsp; </strong><a href="Flyer/Banner/Banner200x70.pdf">2x0,7</a><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <strong>&nbsp;-Altes Low Effort Banner</strong> 
-(<a href="Flyer/Banner/BannerAltPDF.pdf">2x0,7</a>)<br />
+<strong>-Altes Low Effort Banner</strong> 
+<br />
+&nbsp;&nbsp;&nbsp; <a href="Flyer/Banner/BannerAltPDF.pdf">2x0,7</a><br />
 <br />
 <br />
 <br />
 <br />
-<strong><span class="auto-style65">A1 Plakate:</span></strong> <br />
+<strong><span class="auto-style67">&nbsp;A1 Plakate: </span></strong> &nbsp;<br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Bitte bei tian_b/ Flashyy/ Melly in 
+&nbsp;&nbsp;&nbsp; Bitte bei tian_b/ Flashyy/ Melly in 
 Auftrag geben!<br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="Flyer/Plakate/plakat_neutral.jpg">Beispiel</a><br />
+&nbsp;&nbsp;&nbsp; <a href="Flyer/Plakate/plakat_neutral.jpg">Beispiel</a><br />
 <br />
 </span>
 </p>
