--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@ Melly / Flashyy<br />
 -#SAVEYOURINTERNET <br />
 &nbsp;&nbsp;&nbsp; 
 </strong><a href="Flyer/Banner/Saveyourinternet/3x075_1.pdf">3x0,75</a> |
+<a href="Flyer/Banner/Saveyourinternet/demobanner1zu2-7mal1-v1.pdf">3,5x0,5</a> 
+|
 <a href="Flyer/Banner/Saveyourinternet/4x075_2.pdf">4x0,75</a> |
 <a href="Flyer/Banner/FreiesInternet/5x075_1.pdf">5x075</a> |
 <a href="Flyer/Banner/FreiesInternet/5x1_1.pdf">5x1</a> |
@@ -160,6 +162,7 @@ Melly / Flashyy<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <br />
 -Für ein freies Internet <br />
 &nbsp;&nbsp;&nbsp; </strong><a href="Flyer/Banner/FreiesInternet/3x075_2.pdf">3x0,75</a> 
+| <a href="Flyer/Banner/FreiesInternet/demobanner1zu2-7mal1-v2.pdf">3,5x0,5</a> 
 | <a href="Flyer/Banner/FreiesInternet/4x075_1.pdf">4x0,75</a> |
 <a href="Flyer/Banner/Saveyourinternet/5x075_2.pdf">5x075</a> |
 <a href="Flyer/Banner/Saveyourinternet/5x1_2.pdf">5x1</a> |
