--- a/Anderes.html
+++ b/Anderes.html
@@ -99,7 +99,7 @@ a {
 </span></strong></span><br />
 <br />
 <br />
-&nbsp;&nbsp;&nbsp; MemeSammlung (<a href="Anderes/Memes-20190315T173804Z-001.zip">Download</a>)<br />
+&nbsp;&nbsp;&nbsp; Meme-Sammlung (<a href="Anderes/Memes-20190315T173804Z-001.zip">Download</a>)<br />
 <br />
 <br />
 <br />
