--- a/staedteflyer.html
+++ b/staedteflyer.html
@@ -221,8 +221,9 @@ Logos</span></a>
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Rostock<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
-<a href="Flyer/Demos/ROSTOCK-finalprint.pdf">Vorderseite</a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
+<a href="Flyer/Demos/ROSTOCK-finalprint.pdf">O<span class="auto-style63">hne 
+Logos</span></a> 
+| <a href="Flyer/Demos/ROSTOCK%20LOGOS-FRONT.pdf">Mit Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Saarbrücken<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
