--- a/staedteflyer.html
+++ b/staedteflyer.html
@@ -219,6 +219,11 @@ Logos</span></a>
 <a href="Flyer/Demos/NUERNBERG-finalprint.pdf">Vorderseite</a> |
 <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Oldenburg<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
+<a href="Flyer/Demos/OLDENBURG-finalprint.pdf">Vorderseite</a> |
+<a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
+<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Rostock<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </strong>
 <a href="Flyer/Demos/ROSTOCK-finalprint.pdf">O<span class="auto-style63">hne 
