--- a/staedteflyer.html
+++ b/staedteflyer.html
@@ -213,6 +213,12 @@ Logos</span></a>
 Logos</span></a> 
 | <a href="Flyer/Demos/MUENCHEN/muc_a6_front_neu.pdf">Mit Logos</a> | <a href="Flyer/RUECKSEITE.pdf">Rückseite</a><strong><br />
 <br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Münster<br />
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</strong>
+<a href="Flyer/Demos/MUENSTER/MUENSTER-finalprint.pdf">Mit Logos</a> |
+<a href="Flyer/Demos/MUENSTER/MUENSTER-rueckseite2.pdf">Rückseite</a><strong><br />
+<br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Nürnberg<br />
 </strong>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
