--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -91,7 +91,7 @@ https://goo.gl/forms/0kB4umt1o9Y4HVxg1</a><br />
 <span class="auto-style57">
 <strong>Facebook Banner für die Demos</strong><br />
 <br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/GERMAN.png"><strong>Allgemein 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="Webseitenstuff/Facebook-HeaderClean3.png"><strong>Allgemein 
 (De)</strong></a><br />
 <br />
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/FRENCH.png"><strong>Allgemein 
