Rewrite with Bootstrap

--- a/Anderes.html
+++ b/Anderes.html
@@ -1,163 +1,205 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+﻿<!DOCTYPE html>
+<html lang="de">
 
 <head>
-<meta content="de" http-equiv="Content-Language" />
-<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-<title>STI MEDIEN FREIGABE</title>
-<style type="text/css">
-.auto-style2 {
-	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-.auto-style29 {
-	text-align: center;
-	margin-right: 0px;
-	margin-bottom: 20px;
-}
-.auto-style30 {
-	margin-left: 348px;
-	margin-top: 134px;
-}
-.auto-style33 {
-	margin-left: 49px;
-}
-.auto-style46 {
-	text-align: center;
-	color: #FFFFFF;
-	background-color: #E5E5E5;
-	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-.auto-style51 {
-	color: #0E2036;
-}
-.auto-style53 {
-	text-decoration: none;
-	color: #000000;
-}
-.auto-style54 {
-	text-align: left;
-	margin-left: 440px;
-}
-.auto-style57 {
-	font-family: Raleway;
-}
-a {
-	color: #FFBF00;
-}
-.auto-style59 {
-	text-align: center;
-	color: #0E2036;
-	background-color: #FFFFFF;
-	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-.auto-style61 {
-	text-decoration: none;
-}
-.auto-style62 {
-	margin-left: 0px;
-}
-.auto-style63 {
-	font-size: x-large;
-}
-.auto-style64 {
-	font-size: x-large;
-	color: #0E2036;
-}
-.auto-style65 {
-	background-color: #FFFFFF;
-}
-.auto-style66 {
-	color: #0E2036;
-	background-color: #FFFFFF;
-}
-.auto-style67 {
-	font-family: Raleway;
-	font-size: x-large;
-	color: #0E2036;
-}
-</style>
+    <meta content="de" http-equiv="Content-Language" />
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>STI MEDIEN FREIGABE</title>
+    <style type="text/css">
+        .auto-style2 {
+            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        }
+        .auto-style29 {
+            text-align: center;
+            margin-right: 0px;
+            margin-bottom: 20px;
+        }
+        .auto-style30 {
+            margin-left: 348px;
+            margin-top: 134px;
+        }
+        .auto-style33 {
+            margin-left: 49px;
+        }
+        .auto-style46 {
+            text-align: center;
+            color: #FFFFFF;
+            background-color: #E5E5E5;
+            font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+        }
+        .auto-style51 {
+            color: #0E2036;
+        }
+        .auto-style53 {
+            text-decoration: none;
+            color: #000000;
+        }
+        .auto-style54 {
+            text-align: left;
+            margin-left: 440px;
+        }
+        .auto-style57 {
+            font-family: Raleway;
+        }
+        a {
+            color: #FFBF00;
+        }
+        .auto-style59 {
+            text-align: center;
+            color: #0E2036;
+            background-color: #FFFFFF;
+            font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+        }
+        .auto-style61 {
+            text-decoration: none;
+        }
+        .auto-style62 {
+            margin-left: 0px;
+        }
+        .auto-style63 {
+            font-size: x-large;
+        }
+        .auto-style64 {
+            font-size: x-large;
+            color: #0E2036;
+        }
+        .auto-style65 {
+            background-color: #FFFFFF;
+        }
+        .auto-style66 {
+            color: #0E2036;
+            background-color: #FFFFFF;
+        }
+        .auto-style67 {
+            font-family: Raleway;
+            font-size: x-large;
+            color: #0E2036;
+        }
+    </style>
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.min.css">
 </head>
 
-<body style="color: #FFFFFF; background-color: #0E2036">
+<body class="bg-sti text-white">
+<nav class="navbar navbar-expand-lg navbar-dark bg-sti fixed-top shadow-sm">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mx-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Flyer</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="SocialMedia.html">Social Media</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="Anderes.html">Anderes <span class="sr-only">(current)</span></a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
-<p class="auto-style29" style="width: 1871px; height: 248px">&nbsp;<img alt="" height="414" src="Webseitenstuff/Facebook-HeaderClean3.png" width="935" class="auto-style33" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-&nbsp;&nbsp;</p>
-<p class="auto-style2">&nbsp;</p>
-<table cellpadding="5" cellspacing="11" class="auto-style30" style="width: 60%">
-	<tr>
-		<td class="auto-style59" style="height: 41px; width: 208px">
-		<strong><a class="auto-style61" href="index.html">
-		<span class="auto-style51">FLYER</span></a></strong></td>
-		<td class="auto-style59" style="height: 41px; width: 197px"><strong>
-		<a class="auto-style53" href="SocialMedia.html">SOCIAL MEDIA</a></strong></td>
-		<td class="auto-style46" style="height: 41px; width: 217px">
-		<span class="auto-style51">ANDERES</span></td>
-	</tr>
-</table>
-<p class="auto-style54" style="width: 876px"><span class="auto-style57">
-<span class="auto-style64"><strong><span class="auto-style65">&nbsp;Memes:
-</span></strong></span><br />
-<br />
-<br />
-&nbsp;&nbsp;&nbsp; Meme-Sammlung (<a href="Anderes/Memes-20190315T173804Z-001.zip">Download</a>)<br />
-<br />
-<br />
-<br />
-<br />
-<span class="auto-style63"><strong><span class="auto-style66">&nbsp;Build-Yourself-Plakat:
-<br />
-<br />
-</span></strong></span></span><br />
-<br />
-<img alt="Anleitung" class="auto-style62" height="412" src="Anderes/BuildYourself/BuildYourselfSign_Anleitung.png" style="float: left" width="669" /><br />
-<br />
-<br />
-<br />
-<br />
-<br />
-&nbsp;&nbsp; <span class="auto-style57">&nbsp;<strong>Oben:</strong></span><br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;
-<a href="Anderes/BuildYourself/BuildYourselfSign_Oben.png">PNG</a> |
-<a href="Anderes/BuildYourself/BuildYourselfSign_Oben.pdf">PDF</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp; <strong>Unten:</strong></span><br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;
-<a href="Anderes/BuildYourself/BuildYourselfSign_Unten.png">PNG</a> |
-<a href="Anderes/BuildYourself/BuildYourselfSign_Unten.pdf">PDF</a></span><br />
-<br />
-<br />
-&nbsp;&nbsp;&nbsp; <span class="auto-style57"><strong>In A4 zerstückelt:</strong></span><br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;
-<a href="Anderes/BuildYourself/a4/BuildYourselfSign_ObenGeteilt.pdf">Oben</a> |
-<a href="Anderes/BuildYourself/a4/BuildYourselfSign_UntenGeteilt.pdf">Unten</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;</span><br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-</p>
-<p class="auto-style54" style="width: 876px">&nbsp;<br />
-<span class="auto-style67"><strong><span class="auto-style65">&nbsp;Logos, etc:
-</span></strong></span><br />
-<br />
-<br />
-<span class="auto-style57"><strong>
-<a href="Anderes/LOGO_frei.png">Logo</a></strong></span><br class="auto-style57" />
-<br />
-<span class="auto-style57"><strong><a href="Anderes/Saveyourinternet.png">#Saveyourinternet</a><br />
-<br />
-<a href="Anderes/changeorgdeutschneu.png">Petitionsbanner</a></strong></span><br />
-<br />
-<br />
-<br />
-<br />
-<br />
-Grafiken können gerne für nicht kommerzielle Zwecke verwendet werden.<br />
-</p>
+<section id="header-img" class="container" style="margin-top: 60px">
+    <div class="row">
+        <div class="col-12">
+            <img src="assets/image/Facebook-HeaderClean3.png" class="img-fluid" alt="Europaweite Demos für ein freies Internet #saveyourinternet">
+        </div>
+    </div>
+</section>
+<section id="memes" class="container mt-3">
+    <div class="row">
+        <div class="col-12">
+            <div class="sti-h1-bg">
+                <h1 class="h1-sti">Memes:</h1>
+            </div>
+        </div>
+        <div class="col-12 mt-3">
+            <h5>Meme-Sammlung (<a href="Anderes/Memes-20190315T173804Z-001.zip">Download</a>)</h5>
+        </div>
+    </div>
+</section>
+<section id="diy-plakat" class="container mt-5">
+    <div class="row">
+        <div class="col-12">
+            <div class="sti-h1-bg">
+                <h1 class="h1-sti">Build-Yourself-Plakat:</h1>
+            </div>
+        </div>
+        <div class="col-12 col-md-8 col-xl-9 mt-3">
+            <img alt="" src="Anderes/BuildYourself/BuildYourselfSign_Anleitung.png" class="img-fluid">
+        </div>
+        <div class="col-12 col-md-4 col-xl-3 mt-3 d-md-flex flex-md-column justify-content-center">
+            <ul class="list-unstyled">
+                <li>
+                    <h5 class="font-weight-bold">Oben:</h5>
+                    <p>
+                        <a href="Anderes/BuildYourself/BuildYourselfSign_Oben.png">PNG</a> |
+                        <a href="Anderes/BuildYourself/BuildYourselfSign_Oben.pdf">PDF</a>
+                    </p>
+                </li>
+                <li>
+                    <h5 class="font-weight-bold">Unten:</h5>
+                    <p>
+                        <a href="Anderes/BuildYourself/BuildYourselfSign_Unten.png">PNG</a> |
+                        <a href="Anderes/BuildYourself/BuildYourselfSign_Unten.pdf">PDF</a>
+                    </p>
+                </li>
+                <li>
+                    <h5 class="font-weight-bold">In A4 zerstückelt:</h5>
+                    <p>
+                        <a href="Anderes/BuildYourself/a4/BuildYourselfSign_ObenGeteilt.pdf">Oben</a> |
+                        <a href="Anderes/BuildYourself/a4/BuildYourselfSign_UntenGeteilt.pdf">Unten</a>
+                    </p>
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+<section id="logos" class="container mt-5">
+    <div class="row">
+        <div class="col-12">
+            <div class="sti-h1-bg">
+                <h1 class="h1-sti">Logos, etc:</h1>
+            </div></div>
+        <div class="col-12 mt-3">
+            <ul class="list-unstyled">
+                <li>
+                    <h5><a href="Anderes/LOGO_frei.png">Logo</a></h5>
+                </li>
+                <li>
+                    <h5><a href="Anderes/Saveyourinternet.png">#Saveyourinternet</a></h5>
+                </li>
+                <li>
+                    <h5><a href="Anderes/changeorgdeutschneu.png">Petitionsbanner</a></h5>
+                </li>
+            </ul>
+        </div>
+        <div class="col-12 mt-5">
+            <h6>Grafiken können gerne für nicht kommerzielle Zwecke verwendet werden.</h6>
+        </div>
+    </div>
+</section>
+<footer class="shadow-sm container mt-5 text-center">
+    <div class="row">
+        <div class="col-12 col-md-6 offset-md-3">
+            <p>
+                <small>
+                    Wir fordern jeden auf, nur die von uns freigegebenen Werbemittel an dafür gestatteten Orten zu nutzen und zu verbreiten. Wir distanzieren uns von jeglichen fremden Werbemitteln und
+                    deren widerrechtlichen Anbringung oder Verbreitung. Desweiteren übernehmen wir keinerlei Haftung für durch eine rechtswidrige Verbreitung entstandene Schäden.
+                </small>
+            </p>
+            <p>
+                <a href="https://savetheinternet.info/imprint">Impressum</a>
+            </p>
+        </div>
+    </div>
+</footer>
 
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
-
 </html>
