--- a/index.html
+++ b/index.html
@@ -1,212 +1,177 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+﻿<!DOCTYPE html>
+<html lang="de">
 
 <head>
-<meta content="de" http-equiv="Content-Language" />
-<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-<title>STI MEDIEN FREIGABE</title>
-<style type="text/css">
-.auto-style2 {
-	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-.auto-style29 {
-	text-align: center;
-	margin-right: 0px;
-	margin-bottom: 20px;
-}
-.auto-style30 {
-	margin-left: 348px;
-	margin-top: 134px;
-}
-.auto-style33 {
-	margin-left: 49px;
-}
-.auto-style46 {
-	text-align: center;
-	color: #FFFFFF;
-	background-color: #FFFFFF;
-	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-.auto-style51 {
-	color: #0E2036;
-}
-.auto-style53 {
-	text-decoration: none;
-}
-.auto-style54 {
-	text-align: left;
-	margin-left: 440px;
-}
-.auto-style55 {
-	text-align: center;
-	font-family: Raleway;
-}
-.auto-style57 {
-	font-family: Raleway;
-}
-.auto-style58 {
-	text-align: center;
-	color: #0E2036;
-	background-color: #E5E5E5;
-	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-a {
-	color: #FFBF00;
-}
-.auto-style59 {
-	text-align: center;
-	color: #0E2036;
-	background-color: #FFFFFF;
-	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-.auto-style60 {
-	text-align: center;
-	margin-left: 440px;
-}
-.auto-style63 {
-	color: #FFBF00;
-}
-.auto-style64 {
-	font-size: small;
-}
-.auto-style65 {
-	font-size: x-large;
-}
-.auto-style66 {
-	font-size: large;
-}
-.auto-style67 {
-	font-size: x-large;
-	color: #0E2036;
-	background-color: #FFFFFF;
-}
-.auto-style68 {
-	color: #0E2036;
-	background-color: #FFFFFF;
-}
-</style>
+    <meta content="de" http-equiv="Content-Language"/>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>STI MEDIEN FREIGABE</title>
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.min.css">
 </head>
 
-<body style="color: #FFFFFF; background-color: #0E2036">
+<body class="bg-sti text-white">
+<nav class="navbar navbar-expand-lg navbar-dark bg-sti fixed-top shadow-sm">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mx-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="index.html">Flyer <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="SocialMedia.html">Social Media</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Anderes.html">Anderes</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
-<p class="auto-style29" style="width: 1871px; height: 248px">&nbsp;<img alt="" height="414" src="Webseitenstuff/Facebook-HeaderClean3.png" width="935" class="auto-style33" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-&nbsp;&nbsp;</p>
-<p class="auto-style2">&nbsp;</p>
-<table cellpadding="5" cellspacing="11" class="auto-style30" style="width: 60%">
-	<tr>
-		<td class="auto-style58" style="height: 41px; width: 208px">
-		Flyer</td>
-		<td class="auto-style59" style="height: 41px; width: 197px">
-		<a class="auto-style53" href="SocialMedia.html"><strong>
-		<span class="auto-style51">SOCIAL MEDIA</span></strong></a></td>
-		<td class="auto-style46" style="height: 41px; width: 217px">
-		<a class="auto-style53" href="Anderes.html">
-		<span class="auto-style51"><strong>ANDERES</strong></span></a></td>
-	</tr>
-</table>
-<p class="auto-style55">&nbsp;</p>
-<p class="auto-style54" style="width: 876px"><span class="auto-style57">
-NAVIGATION FÜR DIE MEDIENFREIGABE VON SAVETHEINTERNET.INFO<br />
-Bei Fragen/Problemen etc. bitte im 
-<a href="http://discord.savetheinternet.info">Discord</a> bei Flashyy/Soldiermelly melden.<br />
-<br />
-</span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57"><strong><span class="auto-style67">&nbsp;Flyer: </span></strong>&nbsp;(A6, 1mm Rand)</span><br class="auto-style57" />
-<br />
-<br class="auto-style57" />
-<span class="auto-style57"><strong>-Infoflyer<br />
-</strong>&nbsp;&nbsp;&nbsp; <a href="Flyer/NIGHTY/NIGHTY-FRONT.pdf">Vorderseite</a> |
-<a href="Flyer/NIGHTY/NIGHTY-BACKneu.pdf">Rückseite</a><strong><br />
-</strong></span>
-<br class="auto-style57" />
-<span class="auto-style57"><strong>-Demo Flyer mit Karte</strong></span><br />
-<span class="auto-style57">
-&nbsp;&nbsp;&nbsp; <a href="Flyer/MELLY/PRINTTEMP.pdf">V<span class="auto-style63">orderseite</span></a> 
-| <a href="Flyer/RUECKSEITE.pdf">Rückseite</a></span><br />
-<br class="auto-style57" />
--<span class="auto-style57"><strong>Einzeldemos <br />
-<br />
-&nbsp;&nbsp;&nbsp; </strong>Regionalleiter/Demoorganisatoren:<strong><br />
-&nbsp;&nbsp;&nbsp; </strong>Logos der 
-Bündnispartner werden auf Nachfrage eingebaut. Gerne könnt ihr das Formular 
-dafür nutzen:<br />
-&nbsp;&nbsp;&nbsp; <a href="https://goo.gl/forms/GDgE1W0WukdAhmET2">
-https://goo.gl/forms/GDgE1W0WukdAhmET2</a><br />
-&nbsp;&nbsp;&nbsp; Bitte auch die Richtigkeit der Angaben auf den Flyern überprüfen!</span><strong><br class="auto-style57" />
-<br />
-<br />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp; <a href="staedteflyer.html">
-<span class="auto-style66">&gt;Zur 
-Städteübersicht</span></a></span><br />
-<br class="auto-style57" />
-</strong><span class="auto-style57"><strong>
-<br />
-<br />
-<span class="auto-style65"><span class="auto-style68">&nbsp;Banner: </span>&nbsp;<br />
-</span> <br />
-</strong>Probleme? Andere Größen notwendig? -&gt; Ansprechpartner: <strong>tian_b / 
-Melly / Flashyy<br />
-</strong>Angaben in Meter<strong>:<br />
-<br />
--#SAVEYOURINTERNET <br />
-&nbsp;&nbsp;&nbsp; 
-</strong><a href="Flyer/Banner/Saveyourinternet/3x075_1.pdf">3x0,75</a> |
-<a href="Flyer/Banner/Saveyourinternet/demobanner1zu2-7mal1-v1.pdf">3,5x0,5</a> 
-|
-<a href="Flyer/Banner/Saveyourinternet/4x075_2.pdf">4x0,75</a> |
-<a href="Flyer/Banner/Saveyourinternet/4x1m_alternative.pdf">4x1</a> |
-<a href="Flyer/Banner/FreiesInternet/5x075_1.pdf">5x075</a> |
-<a href="Flyer/Banner/FreiesInternet/5x1_1.pdf">5x1</a> |
-<a href="Flyer/Banner/Saveyourinternet/6x1_1.pdf">6x1</a> |
-<a href="Flyer/Banner/Saveyourinternet/demobanner1zu2-7mal1-v1.pdf">7x1</a><strong><br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <br />
--Für ein freies Internet <br />
-&nbsp;&nbsp;&nbsp; </strong><a href="Flyer/Banner/FreiesInternet/3x075_2.pdf">3x0,75</a> 
-| <a href="Flyer/Banner/FreiesInternet/demobanner1zu2-7mal1-v2.pdf">3,5x0,5</a> 
-| <a href="Flyer/Banner/FreiesInternet/4x075_1.pdf">4x0,75</a> |
-<a href="Flyer/Banner/FreiesInternet/4x1m.pdf">4x1</a> |
-<a href="Flyer/Banner/Saveyourinternet/5x075_2.pdf">5x075</a> |
-<a href="Flyer/Banner/Saveyourinternet/5x1_2.pdf">5x1</a> |
-<a href="Flyer/Banner/FreiesInternet/6x1_2.pdf">6x1</a> |
-<a href="Flyer/Banner/FreiesInternet/demobanner1zu2-7mal1-v2.pdf">7x1</a><strong><br />
-<br />
-<br />
-</strong>Outdated:<strong><br />
--#SAVEYOURINTERNET<br />
-&nbsp;&nbsp;&nbsp; </strong><a href="Flyer/Banner/Banner200x70.pdf">2x0,7</a><br />
-<br />
-<strong>-Altes Low Effort Banner</strong> 
-<br />
-&nbsp;&nbsp;&nbsp; <a href="Flyer/Banner/BannerAltPDF.pdf">2x0,7</a><br />
-<br />
-<br />
-<br />
-<br />
-<strong><span class="auto-style67">&nbsp;A1 Plakate: </span></strong> &nbsp;<br />
-<br />
-&nbsp;&nbsp;&nbsp; Bitte bei tian_b/ Flashyy/ Melly in 
-Auftrag geben!<br />
-<br />
-&nbsp;&nbsp;&nbsp; <a href="Flyer/Plakate/plakat_neutral.jpg">Beispiel</a><br />
-<br />
-</span>
-</p>
-<p class="auto-style60" style="width: 876px"><br />
-<span class="auto-style57"><br />
-<br />
-<br />
-<span class="auto-style64">Wir fordern jeden auf, nur die von uns freigegebenen 
-Werbemittel an dafür gestatteten Orten zu nutzen und zu verbreiten. Wir 
-distanzieren uns von jeglichen fremden Werbemitteln und deren widerrechtlichen 
-Anbringung oder Verbreitung. Desweiteren übernehmen wir keinerlei Haftung für 
-durch eine rechtswidrige Verbreitung entstandene Schäden.</span><br />
-<br />
-<a href="https://savetheinternet.info/imprint">Impressum</a><br />
-</span><br class="auto-style57" />
-<br />
-</p>
+<section id="header-img" class="container" style="margin-top: 60px">
+    <div class="row">
+        <div class="col-12">
+            <img src="assets/image/Facebook-HeaderClean3.png" class="img-fluid" alt="Europaweite Demos für ein freies Internet #saveyourinternet">
+        </div>
+    </div>
+</section>
+<section id="pre-text" class="container mt-5">
+    <div class="row">
+        <div class="col-12">
+            <p>
+                Bei Fragen/Problemen etc. bitte im <a href="http://discord.savetheinternet.info">Discord</a> bei <b>Flashyy</b> / <b>Soldiermelly</b> melden.
+            </p>
+        </div>
+    </div>
+</section>
+<section id="flyer" class="container mt-3">
+    <div class="row">
+        <div class="col-12">
+            <div class="sti-h1-bg">
+                <h1 class="h1-sti">Flyer:</h1>
+            </div>
+            <h3>(A6, 1mm Rand)</h3>
+        </div>
+        <div class="col-12 mt-3">
+            <ul class="list-dash">
+                <li><h5>Infoflyer</h5>
+                    <p>
+                        <a href="Flyer/NIGHTY/NIGHTY-FRONT.pdf">Vorderseite</a> |
+                        <a href="Flyer/NIGHTY/NIGHTY-BACKneu.pdf">Rückseite</a>
+                    </p>
+                </li>
+                <li><h5>Demo Flyer mit Karte</h5>
+                    <p>
+                        <a href="Flyer/MELLY/PRINTTEMP.pdf">Vorderseite</a> |
+                        <a href="Flyer/RUECKSEITE.pdf">Rückseite</a>
+                    </p>
+                </li>
+                <li><h5>Einzeldemos</h5>
+                    <p>
+                        <b>Regionalleiter/Demoorganisatoren:</b><br/>
+                        Logos der Bündnispartner werden auf Nachfrage eingebaut. Gerne könnt ihr das Formular dafür nutzen:<br/>
+                        <a href="https://goo.gl/forms/GDgE1W0WukdAhmET2">https://goo.gl/forms/GDgE1W0WukdAhmET2</a><br/>
+                        Bitte auch die Richtigkeit der Angaben auf den Flyern überprüfen!
+                    </p>
+                    <h5 class="mt-3"><a href="staedteflyer.html">&#x1F872;Zur Städteübersicht</a></h5>
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+<section id="banner" class="container mt-5">
+    <div class="row">
+        <div class="col-12">
+            <div class="sti-h1-bg">
+                <h1 class="h1-sti">Banner:</h1>
+            </div>
+            <h3>(Angaben in Metern)</h3>
+        </div>
+        <div class="col-12 mt-3">
+            <p>
+                Probleme? Andere Größen notwendig? &#x1F872; Ansprechpartner: <b>tian_b</b> /
+                <b>Melly</b> / <b>Flashyy</b>
+            </p>
+            <ul class="list-dash">
+                <li><h5>#SAVEYOURINTERNET</h5>
+                    <p>
+                        <a href="Flyer/Banner/Saveyourinternet/3x075_1.pdf">3x0,75</a> |
+                        <a href="Flyer/Banner/Saveyourinternet/demobanner1zu2-7mal1-v1.pdf">3,5x0,5</a> |
+                        <a href="Flyer/Banner/Saveyourinternet/4x075_2.pdf">4x0,75</a> |
+                        <a href="Flyer/Banner/Saveyourinternet/4x1m_alternative.pdf">4x1</a> |
+                        <a href="Flyer/Banner/FreiesInternet/5x075_1.pdf">5x075</a> |
+                        <a href="Flyer/Banner/FreiesInternet/5x1_1.pdf">5x1</a> |
+                        <a href="Flyer/Banner/Saveyourinternet/6x1_1.pdf">6x1</a> |
+                        <a href="Flyer/Banner/Saveyourinternet/demobanner1zu2-7mal1-v1.pdf">7x1</a>
+                    </p>
+                </li>
+                <li><h5>Für ein freies Internet</h5>
+                    <p>
+                        <a href="Flyer/Banner/FreiesInternet/3x075_2.pdf">3x0,75</a> |
+                        <a href="Flyer/Banner/FreiesInternet/demobanner1zu2-7mal1-v2.pdf">3,5x0,5</a> |
+                        <a href="Flyer/Banner/FreiesInternet/4x075_1.pdf">4x0,75</a> |
+                        <a href="Flyer/Banner/FreiesInternet/4x1m.pdf">4x1</a> |
+                        <a href="Flyer/Banner/Saveyourinternet/5x075_2.pdf">5x075</a> |
+                        <a href="Flyer/Banner/Saveyourinternet/5x1_2.pdf">5x1</a> |
+                        <a href="Flyer/Banner/FreiesInternet/6x1_2.pdf">6x1</a> |
+                        <a href="Flyer/Banner/FreiesInternet/demobanner1zu2-7mal1-v2.pdf">7x1</a>
+                    </p>
+                </li>
+            </ul>
+            <h6 class="mt-5" style="margin-left: 20px">Outdated:</h6>
+            <ul class="list-dash">
+                <li><h5>#SAVEYOURINTERNET</h5>
+                    <p>
+                        <a href="Flyer/Banner/Banner200x70.pdf">2x0,7</a>
+                    </p>
+                </li>
+                <li><h5>Altes Low Effort Banner</h5>
+                    <p>
+                        <a href="Flyer/Banner/BannerAltPDF.pdf">2x0,7</a>
+                    </p>
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+<section id="plakate" class="container mt-5">
+    <div class="row">
+        <div class="col-12">
+            <div class="sti-h1-bg">
+                <h1 class="h1-sti">A1 Plakate:</h1>
+            </div>
+        </div>
+        <div class="col-12 mt-3">
+            <p>
+                Bitte bei <b>tian_b</b> / <b>Flashyy</b> / <b>Melly</b> in Auftrag geben!
+            </p>
+            <p>
+                <a href="Flyer/Plakate/plakat_neutral.jpg">Beispiel</a>
+            </p>
+        </div>
+    </div>
+</section>
+<footer class="shadow-sm container mt-5 text-center">
+    <div class="row">
+        <div class="col-12 col-md-6 offset-md-3">
+            <p>
+                <small>
+                    Wir fordern jeden auf, nur die von uns freigegebenen Werbemittel an dafür gestatteten Orten zu nutzen und zu verbreiten. Wir distanzieren uns von jeglichen fremden Werbemitteln und
+                    deren widerrechtlichen Anbringung oder Verbreitung. Desweiteren übernehmen wir keinerlei Haftung für durch eine rechtswidrige Verbreitung entstandene Schäden.
+                </small>
+            </p>
+            <p>
+                <a href="https://savetheinternet.info/imprint">Impressum</a>
+            </p>
+        </div>
+    </div>
+</footer>
 
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
-
 </html>
