--- a/SocialMedia.html
+++ b/SocialMedia.html
@@ -1,130 +1,128 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-
+﻿<!DOCTYPE html>
+<html lang="de">
 <head>
-<meta content="de" http-equiv="Content-Language" />
-<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-<title>STI MEDIEN FREIGABE</title>
-<style type="text/css">
-.auto-style2 {
-	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-.auto-style29 {
-	text-align: center;
-	margin-right: 0px;
-	margin-bottom: 20px;
-}
-.auto-style30 {
-	margin-left: 348px;
-	margin-top: 134px;
-}
-.auto-style33 {
-	margin-left: 49px;
-}
-.auto-style46 {
-	text-align: center;
-	color: #FFFFFF;
-	background-color: #FFFFFF;
-	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-.auto-style51 {
-	color: #0E2036;
-}
-.auto-style53 {
-	text-decoration: none;
-}
-.auto-style54 {
-	text-align: left;
-	margin-left: 440px;
-}
-.auto-style57 {
-	font-family: Raleway;
-}
-.auto-style58 {
-	text-align: center;
-	color: #0E2036;
-	background-color: #E5E5E5;
-	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-a {
-	color: #FFBF00;
-}
-.auto-style59 {
-	text-align: center;
-	color: #0E2036;
-	background-color: #FFFFFF;
-	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-.auto-style60 {
-	color: #0E2036;
-	background-color: #FFFFFF;
-}
-.auto-style61 {
-	color: #FFBF00;
-}
-</style>
+    <meta content="de" http-equiv="Content-Language"/>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>STI MEDIEN FREIGABE</title>
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.min.css">
 </head>
 
-<body style="color: #FFFFFF; background-color: #0E2036">
+<body class="bg-sti text-white">
+<nav class="navbar navbar-expand-lg navbar-dark bg-sti fixed-top shadow-sm">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mx-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Flyer</a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="SocialMedia.html">Social Media  <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="Anderes.html">Anderes</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
-<p class="auto-style29" style="width: 1871px; height: 248px">&nbsp;<img alt="" height="414" src="Webseitenstuff/Facebook-HeaderClean3.png" width="935" class="auto-style33" />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-&nbsp;&nbsp;</p>
-<p class="auto-style2">&nbsp;</p>
-<table cellpadding="5" cellspacing="11" class="auto-style30" style="width: 60%">
-	<tr>
-		<td class="auto-style59" style="height: 41px; width: 208px">
-		<strong><a class="auto-style53" href="index.html">
-		<span class="auto-style60">Flyer</span></a></strong></td>
-		<td class="auto-style58" style="height: 41px; width: 197px">SOCIAL MEDIA</td>
-		<td class="auto-style46" style="height: 41px; width: 217px">
-		<a class="auto-style53" href="Anderes.html">
-		<span class="auto-style51"><strong>ANDERES</strong></span></a></td>
-	</tr>
-</table>
-<p class="auto-style54" style="width: 876px"><br />
-<span class="auto-style57">Ihr braucht irgendwas?-&gt;
-<a href="https://goo.gl/forms/0kB4umt1o9Y4HVxg1">
-https://goo.gl/forms/0kB4umt1o9Y4HVxg1</a><br />
-</span>
-<br />
-<br />
-<span class="auto-style57">
-<strong>Facebook Banner für die Demos</strong><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="Webseitenstuff/Facebook-HeaderClean3.png"><strong>Allgemein 
-(De)</strong></a><br />
-<br />
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/FRENCH.png"><strong>Allgemein 
-(Fr)</strong></a><br />
-</span><br />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/BREMEN.png">Bremen</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/DORTMUND.png">Dortmund</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/DRESDEN.png">Dresden</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/DUESSELDORF.png">Düsseldorf</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/FRANKFURT.png">Frankfurt</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/HAMBURG.png">Hamburg</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/HANNOVER.png">Hannover</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/LEIPZIG.png">Leipzig</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/MAGDEBURG.png">Magdeburg</a></span><br class="auto-style57" />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/muenchenNeu.jpg">München</a></span><br class="auto-style57" />
-<br />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -Nürnberg:
-<a href="SocialMedia/Banner/NUERNBERG.png">FB Header</a> |
-<a href="SocialMedia/NuernbergAnnouncer.png">G<span class="auto-style61">rafik</span></a> 
-(Twitter/Insta....)</span><br />
-<br class="auto-style57" />
-<span class="auto-style57">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -<a href="SocialMedia/Banner/SAARBRUECKEN.png">Saarbrücken</a></span><br />
-</p>
+<section id="header-img" class="container" style="margin-top: 60px">
+    <div class="row">
+        <div class="col-12">
+            <img src="assets/image/Facebook-HeaderClean3.png" class="img-fluid" alt="Europaweite Demos für ein freies Internet #saveyourinternet">
+        </div>
+    </div>
+</section>
+<section id="pre-text" class="container mt-5">
+    <div class="row">
+        <div class="col-12">
+            <p>
+                Ihr braucht irgendwas? &#x1F872; <a href="https://goo.gl/forms/0kB4umt1o9Y4HVxg1">https://goo.gl/forms/0kB4umt1o9Y4HVxg1</a>
+            </p>
+        </div>
+    </div>
+</section>
+<section id="fb-banner" class="container mt-3">
+    <div class="row">
+        <div class="col-12">
+            <div class="sti-h1-bg">
+                <h1 class="h1-sti">Facebook Banner für die Demos:</h1>
+            </div>
+        </div>
+        <div class="col-12 mt-3">
+            <ul class="list-dash">
+                <li>
+                    <h5><a href="assets/image/Facebook-HeaderClean3.png">Allgemein (De)</a></h5>
+                </li>
+                <li>
+                    <h5><a href="SocialMedia/Banner/FRENCH.png">Allgemein (Fr)</a></h5>
+                </li>
+                <li>
+                    <h5><a href="SocialMedia/Banner/BREMEN.png">Bremen</a></h5>
+                </li>
+                <li>
+                    <h5><a href="SocialMedia/Banner/DORTMUND.png">Dortmund</a></h5>
+                </li>
+                <li>
+                    <h5><a href="SocialMedia/Banner/DRESDEN.png">Dresden</a></h5>
+                </li>
+                <li>
+                    <h5><a href="SocialMedia/Banner/DUESSELDORF.png">Düsseldorf</a></h5>
+                </li>
+                <li>
+                    <h5><a href="SocialMedia/Banner/FRANKFURT.png">Frankfurt</a></h5>
+                </li>
+                <li>
+                    <h5><a href="SocialMedia/Banner/HAMBURG.png">Hamburg</a></h5>
+                </li>
+                <li>
+                    <h5><a href="SocialMedia/Banner/HANNOVER.png">Hannover</a></h5>
+                </li>
+                <li>
+                    <h5><a href="SocialMedia/Banner/LEIPZIG.png">Leipzig</a></h5>
+                </li>
+                <li>
+                    <h5><a href="SocialMedia/Banner/MAGDEBURG.png">Magdeburg</a></h5>
+                </li>
+                <li>
+                    <h5><a href="SocialMedia/Banner/muenchenNeu.jpg">München</a></h5>
+                </li>
+                <li>
+                    <h5>Nürnberg</h5>
+                    <p>
+                        <a href="SocialMedia/Banner/NUERNBERG.png">Facebook Headder</a> |
+                        <a href="SocialMedia/NuernbergAnnouncer.png">Grafik</a> (Twitter/Insta....)
+                    </p>
+                </li>
+                <li>
+                    <h5><a href="SocialMedia/Banner/SAARBRUECKEN.png">Saarbrücken</a></h5>
+                </li>
+            </ul>
+        </div>
+    </div>
+</section>
+<footer class="shadow-sm container mt-5 text-center">
+    <div class="row">
+        <div class="col-12 col-md-6 offset-md-3">
+            <p>
+                <small>
+                    Wir fordern jeden auf, nur die von uns freigegebenen Werbemittel an dafür gestatteten Orten zu nutzen und zu verbreiten. Wir distanzieren uns von jeglichen fremden Werbemitteln und
+                    deren widerrechtlichen Anbringung oder Verbreitung. Desweiteren übernehmen wir keinerlei Haftung für durch eine rechtswidrige Verbreitung entstandene Schäden.
+                </small>
+            </p>
+            <p>
+                <a href="https://savetheinternet.info/imprint">Impressum</a>
+            </p>
+        </div>
+    </div>
+</footer>
 
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </body>
-
 </html>
